Оформлено модальное окно

--- a/portfolio.html
+++ b/portfolio.html
@@ -314,8 +314,8 @@
             </ul>
           </address>
         </div>
-        <div>
-          <h2 class="ft-header-social">приєднуйтесь</h2>
+        <div class="ft-center-side-container">
+          <h2 class="ft-header">приєднуйтесь</h2>
           <ul class="link ft-social-container">
             <li class="ft-icon-container list">
               <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
@@ -346,6 +346,18 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="ft-subscribe-container">
+          <h2 class="ft-header">Підпишіться на розсилку</h2>
+          <form class="ft-subscription">
+            <input class="ft-input" type="email" name="email" placeholder="E-mail" />
+            <button type="submit" class="ft-btn">
+              Підписатися
+              <svg class="ft-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
