--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
             </ul>
           </address>
         </div>
-        <div>
-          <h2 class="ft-header-social">приєднуйтесь</h2>
+        <div class="ft-center-side-container">
+          <h2 class="ft-header">приєднуйтесь</h2>
           <ul class="link ft-social-container">
             <li class="ft-icon-container list">
               <a href="" class="ft-icon-link" target="_blank" rel="noopener noreferrer">
@@ -421,6 +421,18 @@
             </li>
           </ul>
         </div>
+        <div class="ft-subscribe-container">
+          <h2 class="ft-header">Підпишіться на розсилку</h2>
+          <form class="ft-subscription">
+            <input class="ft-input" type="email" name="email" placeholder="E-mail" />
+            <button type="submit" class="ft-btn">
+              Підписатися
+              <svg class="ft-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -432,6 +444,58 @@
             <use href="./images/icons.svg#close-modal"></use>
           </svg>
         </button>
+        <h2 class="mdl-header">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="mdl-form">
+          <label class="form-field"
+            >Ім'я
+            <input class="mdl-input" type="text" name="name" required />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#person-modal"></use>
+            </svg>
+          </label>
+
+          <label class="form-field"
+            >Телефон
+            <input
+              class="mdl-input"
+              type="tel"
+              name="phone"
+              minlength="9"
+              maxlength="14"
+              required
+            />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#phone-modal"></use>
+            </svg>
+          </label>
+
+          <label class="form-field"
+            >Пошта
+            <input class="mdl-input" type="e-mail" name="e-mail" required />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#email-modal"></use>
+            </svg>
+          </label>
+
+          <label class="form-field form-field-textarea"
+            >Коментар
+            <textarea
+              class="mdl-textarea"
+              name="comment"
+              rows="7"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+
+          <label class="mdl-label-agr">
+            <input class="mdl-checkbox" type="checkbox" />
+            <span class="mdl-icon-checkbox"></span>
+            <span class="mdl-label-agree">Погоджуюся з розсилкою та приймаю</span>
+            <a class="mdl-label-agreement" href="">Умови договору</a>
+          </label>
+
+          <button class="mdl-btn-send" type="submit">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
