--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
           <label class="form-field"
             >Пошта
-            <input class="mdl-input" type="e-mail" name="e-mail" required />
+            <input class="mdl-input" type="email" name="e-mail" required />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#email-modal"></use>
             </svg>
